Fixed dos and donts layout for wide screens
Known Issues: not responsive yet

--- a/_src/sass/layouts/_donts.scss
+++ b/_src/sass/layouts/_donts.scss
@@ -19,7 +19,7 @@
 
     /* Dos box and icon. */
     figure.yes {
-        @include column(5);
+        @include column(6);
         @include push;
 
         /* Icon. */
